--- a/style/index.css
+++ b/style/index.css
@@ -150,12 +150,76 @@ header .content-container .content-bottom span {
 }
 
 .main-project {
-    border: 1px solid dodgerblue;
     margin-bottom: 25px;
     height: 400px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.main-project img {
+    height: 400px;
+    width: 1000px;
+}
+
+.box-container {
+    display: flex;
+    flex-direction: column;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.box-container .boxes {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.box-container .boxes img {
+    width: 200px;
+    height: 200px;
+}
+
+.social-media {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+}
+
+.about-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+}
+
+.about-container .about-left {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 400px;
+}
+
+.about-container .about-left img {
+    width: 200px;
+    height: 200px;
+}
+
+.about-container .about-right {
+    display: flex;
+    flex-direction: row;
+}
+
+.about-container .about-right .left {
+    flex-direction: row;
+    justify-content: flex-start;
+    width: 150px;
+    color: dodgerblue;
+    font-weight: bold;
 }
 
 .projects-container {
@@ -172,6 +236,11 @@ header .content-container .content-bottom span {
     margin-bottom: 25px;
 }
 
+.projects-container .projects-left img {
+    width: 250px;
+    height: 575px;
+}
+
 .projects-container .projects-right {
     background-color: #4d4d4d;
     width: 250px;
@@ -183,7 +252,6 @@ header .content-container .content-bottom span {
 }
 
 .project {
-    border: 1px solid dodgerblue;
     width: 250px;
     display: flex;
     justify-content: center;
